--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -177,7 +177,7 @@ header {
 /* Sidebar Style */
 
 .sidebar-navigation {
-  width: 22.5%;
+  width: 15.5%;
   float: left;
   height: 100%;
   position: fixed;
@@ -206,7 +206,7 @@ header {
   height: 100px;
   width: 100%;
   display: inline-block;
-  border: 1px solid rgba(250,250,250,0.5);
+  /*border: 1px solid rgba(250,250,250,0.5);*/
   border-radius: 50%;
 }
 
