--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -208,7 +208,29 @@ header {
   display: inline-block;
   /*border: 1px solid rgba(250,250,250,0.5);*/
   border-radius: 50%;
+ 
+      top: 50%;
+      left: 50%;
+      width: 140px;
+      height: 140px;
+/*      margin-left: -102px;
+      margin-top: -102px;*/
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #25d8fb), color-stop(100%, #4f66bb));
+      border-radius: 50%;
+      z-index: 2;
 }
+
+  .sidebar-navigation .logo a {
+      animation: spin .7s infinite linear;
+    }
+    @-webkit-keyframes spin{
+      0%{
+        transform: rotateZ(0deg);
+      }
+      100%{
+        transform: rotateZ(360deg);
+      }
+    }
 
 .sidebar-navigation .logo em {
   font-style: normal;
