--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -191,7 +191,7 @@ header {
   height: 140px;
   /*line-height: 100px;*/
   background-color: #eb5a1e;
-  padding: 20px;
+  margin: 20px;
   text-align: center;
   border-radius: 50%;
 }
@@ -201,36 +201,16 @@ header {
   color: #fff;
   font-size: 24px;
   font-weight: 700;
+  margin: 20px;
   text-transform: uppercase;
   letter-spacing: 0.5px;
   height: 100px;
-  width: 100%;
+  width: 70%;
   display: inline-block;
   /*border: 1px solid rgba(250,250,250,0.5);*/
   border-radius: 50%;
- 
-      top: 50%;
-      left: 50%;
-      width: 140px;
-      height: 140px;
-/*      margin-left: -102px;
-      margin-top: -102px;*/
-      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #25d8fb), color-stop(100%, #4f66bb));
-      border-radius: 50%;
-      z-index: 2;
-}
 
-  .sidebar-navigation .logo a {
-      animation: spin .7s infinite linear;
-    }
-    @-webkit-keyframes spin{
-      0%{
-        transform: rotateZ(0deg);
-      }
-      100%{
-        transform: rotateZ(360deg);
-      }
-    }
+}
 
 .sidebar-navigation .logo em {
   font-style: normal;
