--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -8,6 +8,8 @@ https://templatemo.com/tm-518-sentra
 
 body {
   font-family: 'Open Sans', sans-serif;
+  background: rgb(246,167,46);
+background: linear-gradient(33deg, rgba(246,167,46,1) 0%, rgba(203,96,9,1) 100%);
 }
 
 p {
