face logo added and text moved outside circule

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -8,8 +8,8 @@ https://templatemo.com/tm-518-sentra
 
 body {
   font-family: 'Open Sans', sans-serif;
-background: rgb(246,197,46);
-background: linear-gradient(122deg, rgba(246,197,46,1) 0%, rgba(240,115,14,1) 100%);
+/*background: rgb(246,197,46);
+background: linear-gradient(122deg, rgba(246,197,46,1) 0%, rgba(240,115,14,1) 100%);*/
 }
 
 p {
@@ -217,6 +217,11 @@ header {
 .sidebar-navigation .logo em {
   font-style: normal;
   font-weight: 300;
+}
+.logo-text{
+  font-size: 20px;
+    color: #fff;
+    font-weight: 700;
 }
 
 .sidebar-navigation nav {
