--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -8,8 +8,8 @@ https://templatemo.com/tm-518-sentra
 
 body {
   font-family: 'Open Sans', sans-serif;
-/*background: rgb(246,197,46);
-background: linear-gradient(122deg, rgba(246,197,46,1) 0%, rgba(240,115,14,1) 100%);*/
+background: rgb(238,201,84);
+background: linear-gradient(90deg, rgba(238,201,84,1) 14%, rgba(240,14,14,1) 40%, rgba(241,61,19,1) 64%, rgba(247,240,94,0.9192051820728291) 94%);
 }
 
 p {
