width and background

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -8,7 +8,7 @@ https://templatemo.com/tm-518-sentra
 
 body {
   font-family: 'Open Sans', sans-serif;
-background: #fafafa;
+background: #FEFDC4;
 
 }
 
@@ -19,7 +19,7 @@ p {
 }
 
 .page-content {
-  width: 77.5%;
+  width: 84.5%;
   float: right;
 }
 
