padding and map added

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -589,11 +589,13 @@ header {
 }
 
 #featured .item .text-content {
-  padding-top: 20px;
+  padding : 10px;
+  padding-bottom: 0px;
   background-color: #fff;
   position: relative;
   z-index: 10;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 #featured .item .text-content h4 {
